<resources>
    <string name="app_name">7MinWorkout</string>
    <string name="start">START</string>
    <string name="main_title_image">Main Title Image</string>
    <string name="get_ready_for">GET READY FOR</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="up_coming_exercise">UPCOMING EXERCISE:</string>
    <string name="up_coming_exercise_name">Up Coming Exercise Name</string>
    <string name="exercise_check">Exercise_Check</string>
    <string name="end">END</string>
    <string name="congratulations">Congratulations!</string>
    <string name="finish">FINISH</string>
    <string name="you_have_completed_the_workout">You have completed the 7 min workout!</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="this_will_stop_your_workout_you_ve_come_this_far_are_you_sure_you_want_to_quit">This will stop your workout. You\'ve come this far, are you sure you want to quit?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="bmi">BMI</string>
    <string name="calculator">Calculator</string>
    <string name="calculate">CALCULATE</string>
    <string name="your_bmi">YOUR BMI</string>
    <string name="height_in_cm">HEIGHT (in cm)</string>
    <string name="weight_in_kg">WEIGHT (in kg)</string>
    <string name="metric_units">METRIC UNITS</string>
    <string name="us_units">US UNITS</string>
    <string name="feet">Feet</string>
    <string name="inch">Inch</string>
    <string name="weight_in_pounds">WEIGHT (in Pounds)</string>
    <string name="history">History</string>
    <string name="image_edit_pen">imageEditPen</string>
    <string name="image_trash_bin">imageTrashBin</string>
    <string name="update_record">Update Record</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter Name</string>
    <string name="email_id">Email ID</string>
    <string name="enter_email_id">Enter Email ID</string>
    <string name="update">UPDATE</string>
    <string name="cancel">CANCEL</string>
    <string name="exercise_completed">EXERCISE COMPLETED</string>
    <string name="no_data_available">NO DATA AVAILABLE</string>
    <string name="image_trash_can">image_trash_can</string>
    <string name="close_button_anim">close_button_anim</string>
    <string name="calendar_image">calendar_image</string>
</resources>