<?xml version="1.0" encoding="utf-8"?>
<!--Designing the custom dialog for back confirmation.)-->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tvWarning"
        android:gravity="center"
        android:layout_marginBottom="15dp"
        android:text="@string/are_you_sure"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/this_will_stop_your_workout_you_ve_come_this_far_are_you_sure_you_want_to_quit"
        android:textColor="#212121"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <Button
        android:id="@+id/btnYes"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:backgroundTint="@color/colorAccent"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvWarning"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnNo"
        android:text="@string/yes"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        />

    <Button
        android:id="@+id/btnNo"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:backgroundTint="@color/colorAccent"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/tvWarning"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnYes"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/no"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
         />

</androidx.constraintlayout.widget.ConstraintLayout>